--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -14,6 +14,6 @@ layout: pages
     <p class="blog-post-title text-center margin-top-20"><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="hover-color">{{ post.title }}</a></p>
     <span class="news-post-cat text-center">{{ post.date | date:"%Y年%m月%d日" }}</span>
     <p class="text-center">{{ post.description }}</p>
-    <p class="text-center"><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="btn btn-blue btn-lg">阅读全文</a></p>
+    <p class="text-center"><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="btn btn-red btn-lg">阅读全文</a></p>
   </div>
 </div>{% endfor %}
