--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   margin: 0;
 }
 a {
-  color: #055093;
+  color: #e62129;
   text-decoration: none;
 }
 a:hover, a:focus {
@@ -36,7 +36,7 @@ a.hover-color, .blog-post-title a:hover, .news-post-cat a:hover {
   transition: all 0.3s ease-in;
 }
 a.hover-color:hover, .blog-post-title a:hover, .news-post-cat a:hover {
-  color: #055093;
+  color: #e62129;
   -moz-transition: all 0.3s ease-in;
   -o-transition: all 0.3s ease-in;
   -webkit-transition: all 0.3s ease-in;
@@ -487,7 +487,7 @@ p {
   text-indent: 2em;
 }
 .text-red {
-  color: #055093;
+  color: #e62129;
 }
 .text-black {
   color: #000000;
@@ -505,7 +505,7 @@ p {
   width: 30px;
   height: 3px;
   margin-bottom: 20px;
-  background-color: #055093;
+  background-color: #e62129;
 }
 /*breadcrumb*/
 .breadcrumb {
@@ -519,7 +519,7 @@ p {
   display: inline-block;
 }
 .breadcrumb > .active {
-  color: #055093;
+  color: #e62129;
 }
 /*Image*/
 img {
@@ -730,7 +730,7 @@ img {
 }
 
 .blog-post-detail a {
-  color: #055093;
+  color: #e62129;
 }
 
 .blog-post-more {
