--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   margin: 0;
 }
 a {
-  color: #e62129;
+  color: #dc3545;
   text-decoration: none;
 }
 a:hover, a:focus {
@@ -36,7 +36,7 @@ a.hover-color, .blog-post-title a:hover, .news-post-cat a:hover {
   transition: all 0.3s ease-in;
 }
 a.hover-color:hover, .blog-post-title a:hover, .news-post-cat a:hover {
-  color: #e62129;
+  color: #dc3545;
   -moz-transition: all 0.3s ease-in;
   -o-transition: all 0.3s ease-in;
   -webkit-transition: all 0.3s ease-in;
@@ -487,16 +487,13 @@ p {
   text-indent: 2em;
 }
 .text-red {
-  color: #e62129;
+  color: #dc3545;
 }
 .text-black {
   color: #000000;
 }
 .bg-red {
-  background-color: #337ab7;
-}
-.bg-light-red {
-  background-color: #d9edf7;
+  background-color: #f8d7da;
 }
 .bg-dark {
   background-color: #f5f5f5;
@@ -505,7 +502,7 @@ p {
   width: 30px;
   height: 3px;
   margin-bottom: 20px;
-  background-color: #e62129;
+  background-color: #dc3545;
 }
 /*breadcrumb*/
 .breadcrumb {
@@ -519,7 +516,7 @@ p {
   display: inline-block;
 }
 .breadcrumb > .active {
-  color: #e62129;
+  color: #dc3545;
 }
 /*Image*/
 img {
@@ -628,8 +625,8 @@ img {
 }
 .btn-red {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #dc3545;
+  border-color: #dc3545;
 }
 .btn-red:hover {
   color: #fff;
@@ -730,7 +727,7 @@ img {
 }
 
 .blog-post-detail a {
-  color: #e62129;
+  color: #dc3545;
 }
 
 .blog-post-more {
@@ -892,7 +889,7 @@ mip-fixed[type=bottom], mip-fixed[type=top]{overflow: initial;}</style>
         <div class="row">
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20 hidden-xs">
             <mip-img src="{{ site.url }}/images/assets/rongju-logo.png" width="116" height="50" alt="荣钜机械Logo"></mip-img>
-            <p class="text-justify margin-btm-10">顺德东叶机电有限公司(凯瑞达工控)成立于2000年，专业研发、生产和销售张力控制器、张力检测器、纠偏控制器、超声波纠偏、跟线纠偏等工控自动 化产品，是工业运动控制、卷材控制的专家。公司自主研发的KRD(凯瑞达)全自动张力控制系统和伺服纠偏控制系统性能 强大、质量稳定、处于国内最尖端的水平，在包装、印刷、标签、造纸、塑料、线缆、无纺布、轮胎和橡胶等行业广泛应用。<a data-title="公司简介" href="{{ site.url }}/about/">了解更多</a></p>
+            <p class="text-justify margin-btm-10">广东省佛山市南海荣钜机械有限公司（原佛山市南海区里水荣达机械厂），创建于2001年，位于有武术之乡美称的黄飞鸿故乡，是一家专业从事鞋带、绳带、织带服装辅料，电线及绝缘导管编织等机械辅助设备的设计、生产、销售以及服务于一体的科技型工厂；工厂以全自动样品整经机、全自动高速分纱机、全自动双锭纬纱机（打线机）、多功能全自动纬纱机（绕纱机）为主打产品；产品畅销全国各地，并外销西班牙，越南、泰国、孟加拉、印度等东南亚国家和南美洲地区，深受客户一致好评。<a data-title="公司简介" href="{{ site.url }}/about/">了解更多</a></p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20 hidden-xs">
             <p class="nav-title">产品中心</p>
