--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -630,8 +630,8 @@ img {
 }
 .btn-red:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #c82333;
+  border-color: #bd2130;
 }
 .btn-radius {
   padding: 12px 30px;
