--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -4,8 +4,10 @@ layout: default
 <div class="bg-red margin-btm-60">
   <ol class="breadcrumb container">
     <li><a href="{{ site.url }}">首页</a></li>
-    <li>/</li>{% if page.layout == 'products-article' or page.layout == 'news-article' %}
-    <li><a href="{{ site.url }}/{{ page.type-en }}/">{{ page.type }}</a></li>
+    <li>/</li>{% if page.layout == 'products-article' %}
+    <li><a href="{{ site.url }}/products/">产品中心</a></li>
+    <li>/</li>{% endif %}{% if page.layout == page.layout == 'news-article' %}
+    <li><a href="{{ site.url }}/news/">新闻中心</a></li>
     <li>/</li>{% endif %}
     <li class="active">{{ page.title }}</li>
   </ol>
