--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -6,7 +6,7 @@ layout: default
     <li><a href="{{ site.url }}">首页</a></li>
     <li>/</li>{% if page.layout == 'products-article' %}
     <li><a href="{{ site.url }}/products/">产品中心</a></li>
-    <li>/</li>{% endif %}{% if page.layout == page.layout == 'news-article' %}
+    <li>/</li>{% endif %}{% if page.layout == 'news-article' %}
     <li><a href="{{ site.url }}/news/">新闻中心</a></li>
     <li>/</li>{% endif %}
     <li class="active">{{ page.title }}</li>
