--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -661,6 +661,48 @@ img {
   text-transform: uppercase;
 }
 
+/*Home*/
+@media (max-width: 767px) {
+  .home-products {
+    background-color: #f5f5f5;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home-products {
+    background-color: #f5f5f5;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .home-products {
+    background-color: #ffffff;
+  }
+}
+@media (min-width: 1200px) {
+  .home-products {
+    background-color: #ffffff;
+  }
+}
+@media (max-width: 767px) {
+  .home-about {
+    background-color: #ffffff;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home-about {
+    background-color: #ffffff;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .home-about {
+    background-color: #f5f5f5;
+  }
+}
+@media (min-width: 1200px) {
+  .home-about {
+    background-color: #f5f5f5;
+  }
+}
+
 /*latest news*/
 .news-sec {
   border: 1px solid #eee;
