--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -904,6 +904,9 @@ img {
 .fa-weixin:before {
   content: "\f1d7";
 }
+.fa-check-circle:before {
+  content: "\f058";
+}
 @font-face {
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
