--- a/_layouts/products-article.html
+++ b/_layouts/products-article.html
@@ -2,28 +2,26 @@
 layout: pages
 ---
 <div class="row">
-  <div class="col-md-6 margin-btm-40">
-    <mip-carousel autoplay defer="3500" layout="responsive" width="1000" height="667" indicator buttonController>
-      <div class="item active"><mip-img src="{{ site.url }}/images/products/{{ page.image }}.jpg" alt="{{ page.title }}"></mip-img></div>{% if page.pic == 'two' %}
-      <div class="item"><mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" alt="{{ page.title }}"></div>{% endif %}{% if page.pic == 'three' %}
-      <div class="item"><mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" alt="{{ page.title }}"></div>
-      <div class="item"><mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" alt="{{ page.title }}"></div>{% endif %}
-    </mip-carousel>
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-40">
+    <mip-img src="{{ site.url }}/images/products/{{ page.image }}.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-md-6 margin-btm-40">
-    <h3 class="margin-btm-20">{{ page.type }}{{ page.title }}</h3>
-    {{ content }}
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-40">
+    <p class="title-3 text-black margin-btm-20">{{ page.title }}</p>
+    <p><i class="fas fa-check-circle"></i> {{ page.features-1 }}</p>
+    <p><i class="fas fa-check-circle"></i> {{ page.features-2 }}</p>{% if page.features-3 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-3 }}</p>{% endif %}{% if page.features-4 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-4 }}</p>{% endif %}{% if page.features-5 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-5 }}</p>{% endif %}{% if page.features-6 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-6 }}</p>{% endif %}{% if page.features-7 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-7 }}</p>{% endif %}{% if page.features-8 == 'wu' %}{% else %}
+    <p><i class="fas fa-check-circle"></i> {{ page.features-8 }}</p>{% endif %}
     <hr class="margin-btm-20">
     <div class="col-lg-4 col-md-6"><p><i class="fas fa-phone"></i> <a href="tel:{{ site.tel }}">{{ site.tel }}</a></p></div>
     <div class="col-lg-4 col-md-6"><p><i class="fab fa-qq"></i> <a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p></div>
     <div class="col-lg-4 col-md-6"><p><i class="fab fa-weixin"></i> <span on="tap:weixin.toggle" id="btn-open" tabindex="0">点击扫码，添加好友</span></p></div>
-    <div class="col-lg-12 col-md-12"><p><i class="fas fa-bookmark"></i> <a href="https://qidots.github.io/manual/{{ page.image }}.pdf" target="_blank">产品说明书下载</a></p></div>
-  </div>{% if page.video == 'wu' %}{% else %}
-  <div class="col-md-12 mt-20">
-    <mip-iframe layout="fixed" width="1600" height="900" src="https://player.youku.com/embed/{{ page.video }}"></mip-iframe>
-  </div>{% endif %}
-  <div class="col-md-12">
-    <h3 class="heading-sec margin-top-50">{{ page.type }}</h3>
-    {% include products-list.html %}
   </div>
 </div>
+<p class="title-3 margin-btm-20">产品用途</p>
+<p><i class="fas fa-check-circle"></i> {{ page.application }}</p>
+{{ content }}
+{% include products-list.html %}
