--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -12,8 +12,8 @@ layout: default
     <li class="active">{{ page.title }}</li>
   </ol>
 </div>
-<div class="container">
-  <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+<div class="container">{% if page.layout == 'products-article' %}
+  {{ content }}{% else %}<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 hidden-sm hidden-xs">
     <p class="nav-title">产品中心</p>
     <div class="red-heading"></div>{% for post in site.categories["products"] %}
     <div class="recent">
@@ -31,5 +31,5 @@ layout: default
   </div>
   <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
     {{ content }}
-  </div>
+  </div>{% endif %}
 </div>
