--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -12,24 +12,6 @@ layout: default
     <li class="active">{{ page.title }}</li>
   </ol>
 </div>
-<div class="container">{% if page.layout == 'products-article' %}
-  {{ content }}{% else %}<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 hidden-sm hidden-xs">
-    <p class="nav-title">产品中心</p>
-    <div class="red-heading"></div>{% for post in site.categories["products"] %}
-    <div class="recent">
-      <p><a href="{{ site.url }}{{ post.url }}" data-title="{{ post.title }}" class="hover-color">{{ post.title }}</a></p>
-    </div>{% endfor %}
-    <hr class="margin-top-20 margin-btm-20">
-    <p class="nav-title">联系方式</p>
-    <div class="red-heading"></div>
-    <p><i class="fas fa-phone"></i> <a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
-    <p><i class="fas fa-mobile-alt"></i> <a href="tel:{{ site.phone }}">{{ site.phone }}</a></p>
-    <p><i class="fab fa-qq"></i> <a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
-    <p><i class="fas fa-fax"></i> {{ site.fax }}</p>
-    <p><i class="fas fa-envelope"></i> {{ site.email }}</p>
-    <p><i class="fab fa-weixin"></i> <span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
-  </div>
-  <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    {{ content }}
-  </div>{% endif %}
+<div class="container">
+  {{ content }}
 </div>
