--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -3,14 +3,14 @@ layout: pages
 ---
 <div class="text-center title-4 text-black">{{ page.title }}</div>
 <div class="blog-post-info">{{ page.date | date:"%Y年%m月%d日" }}</div>
-<div class="text-indent-2">
+<div class="text-indent-2 margin-btm-30">
   {{ content }}
 </div>
 <hr>
-<p class="title-4 text-center margin-top-40 margin-btm-20"><a data-title="行业资讯" href="{{ site.url }}/news/">更多新闻</a></p>
+<p class="title-4 text-center margin-top-30 margin-btm-20"><a data-title="行业资讯" href="{{ site.url }}/news/">更多新闻</a></p>
 <div class="row">
-{% for post in site.categories["news"] limit:3 %}
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-20">
+{% for post in site.categories["news"] limit:4 %}
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <div class="news-sec">
     <a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}"><mip-img src="{{ site.url }}/images/news/{{ post.image }}.jpg" alt="{{ post.title }}"></mip-img></a>
     <div class="news-desc">
