--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,9 @@
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20 hidden-xs">
             <p class="nav-title">产品中心</p>
             <div class="red-heading"></div>
-            <ul class="post-list list-unstyled">{% for post in site.categories["products"] %}
+            <ul class="post-list list-unstyled">{% for post in site.categories["products"] limit:6 %}
               <li><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="hover-color">{{ post.title }}</a></li>{% endfor %}
+              <li><a data-title="产品中心" href="{{ site.url }}/products/" class="hover-color">更多产品</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20 hidden-xs">
