--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center footer-bottom margin-top-20">Copyright © 2016-2019 佛山市南海荣钜机械有限公司 | <a href="http://www.beian.miit.gov.cn/" target="_blank">粤ICP备1206xxxx号-1</a> | <a href="{{ site.url }}/sitemap.xml">Sitemap</a></div>
+          <div class="col-md-12 text-center footer-bottom margin-top-20">Copyright © 2016-2019 佛山市南海荣钜机械有限公司 | <a href="http://www.beian.miit.gov.cn/" target="_blank">粤ICP备19148301号-1</a> | <a href="{{ site.url }}/sitemap.xml">Sitemap</a></div>
         </div>
       </div>
     </div>
