--- a/style.css
+++ b/style.css
@@ -457,6 +457,9 @@ p {
   margin-bottom: 10px;
   font-weight: bold;
 }
+.font-size-16 {
+  font-size: 16px;
+}
 .text-left {
   text-align: left;
 }
