--- a/style.css
+++ b/style.css
@@ -457,9 +457,6 @@ p {
   margin-bottom: 10px;
   font-weight: bold;
 }
-.font-size-16 {
-  font-size: 16px;
-}
 .text-left {
   text-align: left;
 }
@@ -762,6 +759,18 @@ img {
   line-height: 34px;
   font-weight: bold;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .shop-item .shop-item-details .shop-item-title {
+  display: table-cell;
+  vertical-align: top;
+  width: 50%;
+  font-size: 15px;
+  line-height: 34px;
+  font-weight: bold;
+  text-align: center;
+}
 }
 
 .shop-item .shop-item-details .shop-item-title > a {
